# opengl-renderer

./: .gitignore  CMakeLists.txt  LICENSE.txt  OpenGLRendererApplication.sln  README.md
Libraries/include/glad/: glad.h
Libraries/lib/: glfw3.lib
Project/: OpenGLRendererApplication.vcxproj  OpenGLRendererApplication.vcxproj.filters  imgui.ini
Project/include/: Application.h  Structures.h
Project/include/buffers/: EBO.h  VAO.h  VBO.h
Project/include/camera/: Camera.h
Project/include/core/: AssimpLoader.h  Camera.h  LightManager.h  MaterialManager.h  ModelManager.h  ObjectManager.h  SceneManager.h  ShaderManager.h  TextureManager.h
Project/include/lighting/: DirectionalLight.h  Light.h  PointLight.h  SpotLight.h
Project/include/material/: Base.h  Material.h
Project/include/mesh/: Cube.h  Mesh.h  Model.h  Object.h  Primitive.h  Sphere.h
Project/include/shaders/: Shader.h
Project/include/textures/: Texture.h
Project/models/Robot/: robo.mtl
Project/shaders/: default.frag  default.vert  directionallight.frag  lighting.frag  lighting.vert  pointlight.frag  spotlight.frag  test.frag  test.vert
Project/src/: Application.cpp  glad.c  main.cpp
Project/src/buffers/: EBO.cpp  VAO.cpp  VBO.cpp
Project/src/camera/: Camera.cpp
Project/src/core/: AssimpLoader.cpp  Camera.cpp  LightManager.cpp  MaterialManager.cpp  ModelManager.cpp  ObjectManager.cpp  SceneManager.cpp  ShaderManager.cpp  TextureManager.cpp
Project/src/lighting/: DirectionalLight.cpp  Light.cpp  PointLight.cpp  SpotLight.cpp
Project/src/material/: Base.cpp  Material.cpp
(+7 files in other folders)
